--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,3 +3,5 @@
 <p>
   This is the home page for the RoR 3 Tutorial Sample App.
 </p>
+
+<%= link_to 'Sign up now!', '#', :class => 'signup_button round' %>
