Using named paths, minor content updates.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
-<h1>Sample App</h1>
+<h1>About the Sample App</h1>
 
 <p>
-  This is the about page for the RoR 3 Tutorial Sample App.
+    It's just a sample app--I didn't really have anything to say.
 </p>
